{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 5,
  "lineage": "b40fc033-b029-442c-42b6-917e8fc487ad",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:688941881616:vpc/vpc-02b4ccd7bead8c3b6",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-058af4521fa46adfd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03213f02e22589411",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b4ccd7bead8c3b6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02846bc5c8f58b0ab",
            "owner_id": "688941881616"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws-web-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:688941881616:security-group/sg-0327d248af136ab99",
            "description": "Allow all port rules",
            "egress": [],
            "id": "sg-0327d248af136ab99",
            "ingress": [],
            "name": "aws-wed-demo",
            "name_prefix": "",
            "owner_id": "688941881616",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "open-all"
            },
            "tags_all": {
              "Name": "open-all"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b4ccd7bead8c3b6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:688941881616:security-group-rule/sgr-0b809d9e4a1ab7c1d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b809d9e4a1ab7c1d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0327d248af136ab99",
            "security_group_rule_id": "sgr-0b809d9e4a1ab7c1d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-web-security",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:688941881616:security-group-rule/sgr-0afbafded95359677",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0afbafded95359677",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0327d248af136ab99",
            "security_group_rule_id": "sgr-0afbafded95359677",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.aws-web-security",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}